Добавил декоративные элементы на главную страницу

--- a/catalog.html
+++ b/catalog.html
@@ -9,6 +9,7 @@
 </head>
 
 <body class="page-body">
+
   <header class="page-header">
 
     <div class="page-navigation-container">
@@ -16,10 +17,10 @@
       <nav class="page-navigation">
 
         <a class="page-header-logo" href="index.html">
-          <img src="img/nerds-logo.svg" width="159" height="65" alt="Логотип сайта">
+          <img src="img/nerds-logo.svg" width="160" height="66" alt="Логотип сайта">
         </a>
 
-        <ul class="site-navigaton">
+        <ul class="site-navigation">
           <li><a href="index.html">Студия</a></li>
           <li><a href="">Клиенты</a></li>
           <li><a href="catalog.html">Магазин</a></li>
@@ -118,11 +119,11 @@
       <h2 class="hidden">Ссылки на социальные сети</h2>
 
       <ul class="social-link-list">
-        <li class="link-list-item"><a class="button" href="">VK</a></li>
+        <li class="link-list-item"><a class="button" href=""></a></li>
         <!--Здесь вместо текста будет  иконка vk-->
-        <li class="link-list-item"><a class="button" href="">FB</a></li>
+        <li class="link-list-item"><a class="button" href=""></a></li>
         <!--Здесь вместо текста будет иконка facebook-->
-        <li class="link-list-item"><a class="button" href="">Insta</a></li>
+        <li class="link-list-item"><a class="button" href=""></a></li>
         <!--Здесь вместо текста будет иконка instagram-->
       </ul>
 
