--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 
       <nav class="page-navigation">
 
-          <a class="page-header-logo" href="">
-            <img src="img/nerds-logo.svg" width="160" height="66" alt="Логотип сайта">
-          </a>
+        <a class="page-header-logo" href="">
+          <img src="img/nerds-logo.svg" width="160" height="66" alt="Логотип сайта">
+        </a>
 
-        <ul class="site-navigaton">
+        <ul class="site-navigation">
           <li><a href="">Студия</a></li>
           <li><a href="">Клиенты</a></li>
           <li><a href="catalog.html">Магазин</a></li>
@@ -43,11 +43,36 @@
 
     <div class="advantages-container">
 
-      <section class="advantages">
+      <section class="advantages-slider container">
+
         <h2 class="hidden">Преимущества</h2>
-        <p class="slogan"><strong>Долго, дорого, скрупулезно.</strong></p>
-        <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
-        <a class="button" href="">Узнать больше</a>
+
+        <ul class="slider-list">
+
+          <li class="slider-list-item slide slide-current">
+            <p class="slogan">Долго, дорого, скрупулезно.</p>
+            <p>Математически выверенный дизайн<br> для вашего сайта или мобильного приложения.</p>
+            <a href="" class="button">Узнать больше</a>
+          </li>
+          <li class="slider-list-item slide">
+            <p class="slogan">Любим математику, как никто другой</p>
+            <p>Никакого креатива, только математические формулы<br> для расчета идеальных пропорций</p>
+            <a href="" class="button">Узнать больше</a>
+          </li>
+          <li class="slider-list-item slide">
+            <p class="slogan">Только ночь,<br> только хардкор</p>
+            <p>Работать днем, как все? Мы против этого.<br> Ближе к полуночи работа только начинается.</p>
+            <a href="" class="button">Узнать больше</a>
+          </li>
+
+        </ul>
+
+        <div class="slider-control">
+          <button class="current" type="button" aria-label="Первый слайд"></button>
+          <button type="button" aria-label="Второй слайд"></button>
+          <button type="button" aria-label="Третий слайд"></button>
+        </div>
+
       </section>
 
     </div>
@@ -135,7 +160,6 @@
   <footer class="page-footer">
 
     <section class="footer-write-us">
-
       <h2 class="hidden">Как нас найти?</h2>
 
       <div class="contacts-container">
@@ -155,11 +179,11 @@
       <h2 class="hidden">Ссылки на социальные сети</h2>
 
       <ul class="social-link-list">
-        <li class="link-list-item"><a class="button" href="">VK</a></li>
+        <li class="link-list-item"><a class="button" href=""></a></li>
         <!--Здесь вместо текста будет  иконка vk-->
-        <li class="link-list-item"><a class="button" href="">FB</a></li>
+        <li class="link-list-item"><a class="button" href=""></a></li>
         <!--Здесь вместо текста будет иконка facebook-->
-        <li class="link-list-item"><a class="button" href="">Insta</a></li>
+        <li class="link-list-item"><a class="button" href=""></a></li>
         <!--Здесь вместо текста будет иконка instagram-->
       </ul>
 
