Добавил декоративные элементы в блок сортировки catalog.html

--- a/catalog.html
+++ b/catalog.html
@@ -64,9 +64,9 @@
           <li><a href="">По названию</a></li>
         </ul>
         <ul class="list-sorting-arrows">
-          <li><a href="">*</a></li>
+          <li><a class="arrow-down" href=""></a></li>
           <!--Здесь будет стрелка вниз-->
-          <li><a href="">*</a></li>
+          <li><a class="arrow-up" href=""></a></li>
           <!--Здесь будет стрелка вверх-->
         </ul>
       </section>
@@ -77,18 +77,18 @@
 
         <ul class="list-view-products">
           <li><img src="img/img-sedona-1.jpg" width="358" height="576" alt="Миниатюра страницы SEDONA"></li>
-          <li><img src="img/img-pink-1.jpg" width="358" height="576" alt="Миниатюра страницы PINK"></li>
-          <li><img src="img/img-barbershop-1.jpg" width="364" height="582" alt="Миниатюра страницы Barbershop"></li>
-          <li><img src="img/img-mishka-1.jpg" width="358" height="573" alt="Миниатюра страницы MISHKA"></li>
-          <li><img src="img/img-aplus-1.jpg" width="358" height="572" alt="Миниатюра страницы Aplus"></li>
-          <li><img src="img/img-kvast-1.jpg" width="358" height="573" alt="Миниатюра страницы KVAST"></li>
+          <li><img src="img/img-pink-1.jpg" width="359" height="578" alt="Миниатюра страницы PINK"></li>
+          <li><img src="img/img-barbershop-1.jpg" width="358" height="578" alt="Миниатюра страницы Barbershop"></li>
+          <li><img src="img/img-mishka-1.jpg" width="359" height="578" alt="Миниатюра страницы MISHKA"></li>
+          <li><img src="img/img-aplus-1.jpg" width="359" height="578" alt="Миниатюра страницы Aplus"></li>
+          <li><img src="img/img-kvast-1.jpg" width="359" height="578" alt="Миниатюра страницы KVAST"></li>
         </ul>
 
         <ul class="list-page-button">
-          <li>1</li>
-          <li><a class="button" href="">2</a></li>
-          <li><a class="button" href="">3</a></li>
-          <li><a class="button" href="">Следующая</a></li>
+          <li class="page-button-item current-page"><a class="button" href="">1</a></li>
+          <li class="page-button-item"><a class="button" href="">2</a></li>
+          <li class="page-button-item"><a class="button" href="">3</a></li>
+          <li class="page-button-item"><a class="button" href="">Следующая</a></li>
         </ul>
 
       </section>
