Добавил декоративные элементы на страницу каталога

--- a/catalog.html
+++ b/catalog.html
@@ -69,6 +69,7 @@
           <li><a class="arrow-up" href=""></a></li>
           <!--Здесь будет стрелка вверх-->
         </ul>
+
       </section>
 
       <section class="list-products">
@@ -76,12 +77,109 @@
         <h2 class="hidden">Список товаров</h2>
 
         <ul class="list-view-products">
-          <li><img src="img/img-sedona-1.jpg" width="358" height="576" alt="Миниатюра страницы SEDONA"></li>
-          <li><img src="img/img-pink-1.jpg" width="359" height="578" alt="Миниатюра страницы PINK"></li>
-          <li><img src="img/img-barbershop-1.jpg" width="358" height="578" alt="Миниатюра страницы Barbershop"></li>
-          <li><img src="img/img-mishka-1.jpg" width="359" height="578" alt="Миниатюра страницы MISHKA"></li>
-          <li><img src="img/img-aplus-1.jpg" width="359" height="578" alt="Миниатюра страницы Aplus"></li>
-          <li><img src="img/img-kvast-1.jpg" width="359" height="578" alt="Миниатюра страницы KVAST"></li>
+
+          <li class="view-products-item">
+            <svg class="path">
+              <rect width="100%" height="100%"/>
+            </svg>
+            <svg class="circles">
+              <circle r="7" cx="16" cy="13"/>
+              <circle r="7" cx="39" cy="13"/>
+              <circle r="7" cx="62" cy="13"/>
+            </svg>
+            <div class="price">
+              <a href="">Sedona</a>
+              <p>Информационный сайт<br> для туристов</p>
+              <button class="button">9 900 <span>&#8381;</span></button>
+            </div>
+            <img src="img/img-sedona-1.jpg" width="358" height="576" alt="Миниатюра страницы SEDONA">
+          </li>
+
+          <li class="view-products-item">
+            <svg class="path">
+              <rect width="100%" height="100%"/>
+            </svg>
+            <svg class="circles">
+              <circle r="7" cx="16" cy="13"/>
+              <circle r="7" cx="39" cy="13"/>
+              <circle r="7" cx="62" cy="13"/>
+            </svg>
+            <div class="price">
+              <a href="">Pink APP</a>
+              <p>Продуктовый лендинг приложения для iOS и Android</p>
+              <button class="button">9 900 <span>&#8381;</span></button>
+            </div>
+            <img src="img/img-pink-1.jpg" width="359" height="578" alt="Миниатюра страницы PINK">
+          </li>
+
+          <li class="view-products-item">
+            <svg class="path">
+              <rect width="100%" height="100%"/>
+            </svg>
+            <svg class="circles">
+              <circle r="7" cx="16" cy="13"/>
+              <circle r="7" cx="39" cy="13"/>
+              <circle r="7" cx="62" cy="13"/>
+            </svg>
+            <div class="price">
+              <a href="">Barbershop</a>
+              <p>Сайт салона красоты.<br>Для мужчин, да.</p>
+              <button class="button">9 900 <span>&#8381;</span></button>
+            </div>
+            <img src="img/img-barbershop-1.jpg" width="358" height="578" alt="Миниатюра страницы Barbershop">
+          </li>
+
+          <li class="view-products-item">
+            <svg class="path">
+              <rect width="100%" height="100%"/>
+            </svg>
+            <svg class="circles">
+              <circle r="7" cx="16" cy="13"/>
+              <circle r="7" cx="39" cy="13"/>
+              <circle r="7" cx="62" cy="13"/>
+            </svg>
+            <div class="price">
+              <a href="">Mishka</a>
+              <p>Интернет-магазин<br>вязаных игрушек</p>
+              <button class="button">9 900 <span>&#8381;</span></button>
+            </div>
+            <img src="img/img-mishka-1.jpg" width="359" height="578" alt="Миниатюра страницы MISHKA">
+          </li>
+
+          <li class="view-products-item">
+            <svg class="path">
+              <rect width="100%" height="100%"/>
+            </svg>
+            <svg class="circles">
+              <circle r="7" cx="16" cy="13"/>
+              <circle r="7" cx="39" cy="13"/>
+              <circle r="7" cx="62" cy="13"/>
+            </svg>
+            <div class="price">
+              <a href="">A plus</a>
+              <p>Лендинг курсов повышения квалификации</p>
+              <button class="button">9 900 <span>&#8381;</span></button>
+            </div>
+            <img src="img/img-aplus-1.jpg" width="359" height="578" alt="Миниатюра страницы Aplus">
+          </li>
+
+          <li class="view-products-item">
+            <svg class="path">
+              <rect width="100%" height="100%"/>
+            </svg>
+            <svg class="circles">
+              <circle r="7" cx="16" cy="13"/>
+              <circle r="7" cx="39" cy="13"/>
+              <circle r="7" cx="62" cy="13"/>
+            </svg>
+            <div class="price">
+              <a href="">Кваст</a>
+              <p>Промо-сайт производителя крафтового пива</p>
+              <button class="button">9 900 <span>&#8381;</span></button>
+            </div>
+            <img src="img/img-kvast-1.jpg" width="359" height="578" alt="Миниатюра страницы KVAST">
+          </li>
+
         </ul>
 
         <ul class="list-page-button">
