Сверстал форму и модальное окно. Изменил сетку каталога

--- a/catalog.html
+++ b/catalog.html
@@ -47,149 +47,231 @@
 
       <section class="filter-products">
 
-        <h2 class="hidden">Фильтр товаров</h2>
+        <h2 class="visually-hidden">Фильтр товаров</h2>
 
-        <!--Здесь будет форма-->
+        <form class="filters" action="https://echo.htmlacademy.ru" method="get">
+          <fieldset class="filter-item">
+            <legend>Стоимость:</legend>
+            <div class="range-filter">
+
+              <div class="range-controls">
+                <div class="scale">
+                  <div class="bar" style="width: 70%; left: 0">
+                  </div>
+                  <div class="toggle toggle-min" tabindex="0" style="left: 5%">
+                  </div>
+                  <div class="toggle toggle-max" tabindex="0" style="left: 65%">
+                  </div>
+                </div>
+              </div>
+
+              <div class="price-controls">
+                <label class="min-price">
+                  от <input type="number" name="min-price" value="0">
+                </label>
+                <label class="max-price">
+                  до <input type="number" name="max-price" value="15000">
+                </label>
+              </div>
+
+            </div>
+          </fieldset>
+          <fieldset class="filter">
+            <legend>Сетка:</legend>
+            <ul>
+              <li class="filter-option filter-radio">
+                <input class="visually-hidden filter-input-radio filter-input" type="radio" name="grid"
+                  id="filter-adaptive" value="adaptive" checked>
+                <label for="filter-adaptive">Адаптивная</label>
+              </li>
+              <li class="filter-option filter-radio">
+                <input class="visually-hidden filter-input-radio filter-input" type="radio" name="grid"
+                  id="filter-fixed" value="fixed">
+                <label for="filter-fixed">Фиксированная</label>
+              </li>
+              <li class="filter-option filter-radio">
+                <input class="visually-hidden filter-input-radio filter-input" type="radio" name="grid"
+                  id="filter-stretch" value="stretch">
+                <label for="filter-stretch">Резиновая</label>
+              </li>
+            </ul>
+          </fieldset>
+          <fieldset class="filter">
+            <legend>Особенности:</legend>
+            <ul>
+              <li class="filter-option filter-checkbox">
+                <input class="visually-hidden filter-input-checkbox filter-input" type="checkbox" name="slider"
+                  id="filter-slider" checked>
+                <label for="filter-slider">Слайдер</label>
+              </li>
+              <li class="filter-option filter-checkbox">
+                <input class="visually-hidden filter-input-checkbox filter-input" type="checkbox" name="advantage"
+                  id="filter-advantage">
+                <label for="filter-advantage">Блок преимуществ</label>
+              </li>
+              <li class="filter-option filter-checkbox">
+                <input class="visually-hidden filter-input-checkbox filter-input" type="checkbox" name="news"
+                  id="filter-news" checked>
+                <label for="filter-news">Новости</label>
+              </li>
+              <li class="filter-option filter-checkbox">
+                <input class="visually-hidden filter-input-checkbox filter-input" type="checkbox" name="gallery"
+                  id="filter-gallery">
+                <label for="filter-gallery">Галерея</label>
+              </li>
+              <li class="filter-option filter-checkbox">
+                <input class="visually-hidden filter-input-checkbox filter-input" type="checkbox" name="shopping-cart"
+                  id="filter-shopping-cart">
+                <label for="filter-shopping-cart">Корзина</label>
+              </li>
+            </ul>
+          </fieldset>
+          <button class="button" type="button">Показать</button>
+        </form>
+
       </section>
 
-      <section class="sorting-products">
+      <div class="sorting-products-wrapper">
 
-        <h2 class="hidden">Сортировка</h2>
+        <section class="sorting-products">
 
-        <p>Сортировать:</p>
+          <h2 class="visually-hidden">Сортировка</h2>
 
-        <ul class="list-sorting-products">
-          <li><a class="here" href="">По цене</a></li>
-          <li><a href="">По типу </a></li>
-          <li><a href="">По названию</a></li>
-        </ul>
-        <ul class="list-sorting-arrows">
-          <li><a class="arrow-down" href=""></a></li>
-          <!--Здесь будет стрелка вниз-->
-          <li><a class="arrow-up" href=""></a></li>
-          <!--Здесь будет стрелка вверх-->
-        </ul>
+          <p>Сортировать:</p>
 
-      </section>
+          <ul class="list-sorting-products">
+            <li><a class="here" href="">По цене</a></li>
+            <li><a href="">По типу </a></li>
+            <li><a href="">По названию</a></li>
+          </ul>
+          <ul class="list-sorting-arrows">
+            <li><a class="arrow-down" href=""></a></li>
+            <li><a class="arrow-up" href=""></a></li>
+          </ul>
 
-      <section class="list-products">
+        </section>
 
-        <h2 class="hidden">Список товаров</h2>
+        <section class="list-products">
 
-        <ul class="list-view-products">
+          <h2 class="visually-hidden">Список товаров</h2>
 
-          <li class="view-products-item">
-            <svg class="path">
-              <rect width="100%" height="100%"/>
-            </svg>
-            <svg class="circles">
-              <circle r="7" cx="16" cy="13"/>
-              <circle r="7" cx="39" cy="13"/>
-              <circle r="7" cx="62" cy="13"/>
-            </svg>
-            <div class="price">
-              <a href="">Sedona</a>
-              <p>Информационный сайт<br> для туристов</p>
-              <button class="button">9 900 <span>&#8381;</span></button>
-            </div>
-            <img src="img/img-sedona-1.jpg" width="358" height="576" alt="Миниатюра страницы SEDONA">
-          </li>
+          <ul class="list-view-products">
 
-          <li class="view-products-item">
-            <svg class="path">
-              <rect width="100%" height="100%"/>
-            </svg>
-            <svg class="circles">
-              <circle r="7" cx="16" cy="13"/>
-              <circle r="7" cx="39" cy="13"/>
-              <circle r="7" cx="62" cy="13"/>
-            </svg>
-            <div class="price">
-              <a href="">Pink APP</a>
-              <p>Продуктовый лендинг приложения для iOS и Android</p>
-              <button class="button">9 900 <span>&#8381;</span></button>
-            </div>
-            <img src="img/img-pink-1.jpg" width="359" height="578" alt="Миниатюра страницы PINK">
-          </li>
+            <li class="view-products-item">
+              <svg class="path">
+                <rect width="100%" height="100%" />
+              </svg>
+              <svg class="circles">
+                <circle r="7" cx="16" cy="13" />
+                <circle r="7" cx="39" cy="13" />
+                <circle r="7" cx="62" cy="13" />
+              </svg>
+              <div class="price">
+                <a href="">Sedona</a>
+                <p>Информационный сайт<br> для туристов</p>
+                <button class="button">9 900 <span>&#8381;</span></button>
+              </div>
+              <img src="img/img-sedona-1.jpg" width="358" height="576" alt="Миниатюра страницы SEDONA">
+            </li>
 
-          <li class="view-products-item">
-            <svg class="path">
-              <rect width="100%" height="100%"/>
-            </svg>
-            <svg class="circles">
-              <circle r="7" cx="16" cy="13"/>
-              <circle r="7" cx="39" cy="13"/>
-              <circle r="7" cx="62" cy="13"/>
-            </svg>
-            <div class="price">
-              <a href="">Barbershop</a>
-              <p>Сайт салона красоты.<br>Для мужчин, да.</p>
-              <button class="button">9 900 <span>&#8381;</span></button>
-            </div>
-            <img src="img/img-barbershop-1.jpg" width="358" height="578" alt="Миниатюра страницы Barbershop">
-          </li>
+            <li class="view-products-item">
+              <svg class="path">
+                <rect width="100%" height="100%" />
+              </svg>
+              <svg class="circles">
+                <circle r="7" cx="16" cy="13" />
+                <circle r="7" cx="39" cy="13" />
+                <circle r="7" cx="62" cy="13" />
+              </svg>
+              <div class="price">
+                <a href="">Pink APP</a>
+                <p>Продуктовый лендинг приложения для iOS и Android</p>
+                <button class="button">9 900 <span>&#8381;</span></button>
+              </div>
+              <img src="img/img-pink-1.jpg" width="359" height="578" alt="Миниатюра страницы PINK">
+            </li>
 
-          <li class="view-products-item">
-            <svg class="path">
-              <rect width="100%" height="100%"/>
-            </svg>
-            <svg class="circles">
-              <circle r="7" cx="16" cy="13"/>
-              <circle r="7" cx="39" cy="13"/>
-              <circle r="7" cx="62" cy="13"/>
-            </svg>
-            <div class="price">
-              <a href="">Mishka</a>
-              <p>Интернет-магазин<br>вязаных игрушек</p>
-              <button class="button">9 900 <span>&#8381;</span></button>
-            </div>
-            <img src="img/img-mishka-1.jpg" width="359" height="578" alt="Миниатюра страницы MISHKA">
-          </li>
+            <li class="view-products-item">
+              <svg class="path">
+                <rect width="100%" height="100%" />
+              </svg>
+              <svg class="circles">
+                <circle r="7" cx="16" cy="13" />
+                <circle r="7" cx="39" cy="13" />
+                <circle r="7" cx="62" cy="13" />
+              </svg>
+              <div class="price">
+                <a href="">Barbershop</a>
+                <p>Сайт салона красоты.<br>Для мужчин, да.</p>
+                <button class="button">9 900 <span>&#8381;</span></button>
+              </div>
+              <img src="img/img-barbershop-1.jpg" width="358" height="578" alt="Миниатюра страницы Barbershop">
+            </li>
 
-          <li class="view-products-item">
-            <svg class="path">
-              <rect width="100%" height="100%"/>
-            </svg>
-            <svg class="circles">
-              <circle r="7" cx="16" cy="13"/>
-              <circle r="7" cx="39" cy="13"/>
-              <circle r="7" cx="62" cy="13"/>
-            </svg>
-            <div class="price">
-              <a href="">A plus</a>
-              <p>Лендинг курсов повышения квалификации</p>
-              <button class="button">9 900 <span>&#8381;</span></button>
-            </div>
-            <img src="img/img-aplus-1.jpg" width="359" height="578" alt="Миниатюра страницы Aplus">
-          </li>
+            <li class="view-products-item">
+              <svg class="path">
+                <rect width="100%" height="100%" />
+              </svg>
+              <svg class="circles">
+                <circle r="7" cx="16" cy="13" />
+                <circle r="7" cx="39" cy="13" />
+                <circle r="7" cx="62" cy="13" />
+              </svg>
+              <div class="price">
+                <a href="">Mishka</a>
+                <p>Интернет-магазин<br>вязаных игрушек</p>
+                <button class="button">9 900 <span>&#8381;</span></button>
+              </div>
+              <img src="img/img-mishka-1.jpg" width="359" height="578" alt="Миниатюра страницы MISHKA">
+            </li>
 
-          <li class="view-products-item">
-            <svg class="path">
-              <rect width="100%" height="100%"/>
-            </svg>
-            <svg class="circles">
-              <circle r="7" cx="16" cy="13"/>
-              <circle r="7" cx="39" cy="13"/>
-              <circle r="7" cx="62" cy="13"/>
-            </svg>
-            <div class="price">
-              <a href="">Кваст</a>
-              <p>Промо-сайт производителя крафтового пива</p>
-              <button class="button">9 900 <span>&#8381;</span></button>
-            </div>
-            <img src="img/img-kvast-1.jpg" width="359" height="578" alt="Миниатюра страницы KVAST">
-          </li>
+            <li class="view-products-item">
+              <svg class="path">
+                <rect width="100%" height="100%" />
+              </svg>
+              <svg class="circles">
+                <circle r="7" cx="16" cy="13" />
+                <circle r="7" cx="39" cy="13" />
+                <circle r="7" cx="62" cy="13" />
+              </svg>
+              <div class="price">
+                <a href="">A plus</a>
+                <p>Лендинг курсов повышения квалификации</p>
+                <button class="button">9 900 <span>&#8381;</span></button>
+              </div>
+              <img src="img/img-aplus-1.jpg" width="359" height="578" alt="Миниатюра страницы Aplus">
+            </li>
 
-        </ul>
+            <li class="view-products-item">
+              <svg class="path">
+                <rect width="100%" height="100%" />
+              </svg>
+              <svg class="circles">
+                <circle r="7" cx="16" cy="13" />
+                <circle r="7" cx="39" cy="13" />
+                <circle r="7" cx="62" cy="13" />
+              </svg>
+              <div class="price">
+                <a href="">Кваст</a>
+                <p>Промо-сайт производителя крафтового пива</p>
+                <button class="button">9 900 <span>&#8381;</span></button>
+              </div>
+              <img src="img/img-kvast-1.jpg" width="359" height="578" alt="Миниатюра страницы KVAST">
+            </li>
 
-        <ul class="list-page-button">
-          <li class="page-button-item current-page"><a class="button" href="">1</a></li>
-          <li class="page-button-item"><a class="button" href="">2</a></li>
-          <li class="page-button-item"><a class="button" href="">3</a></li>
-          <li class="page-button-item"><a class="button" href="">Следующая</a></li>
-        </ul>
 
-      </section>
+          </ul>
+
+          <ul class="list-page-button">
+            <li class="page-button-item current-page"><a class="button" href="">1</a></li>
+            <li class="page-button-item"><a class="button" href="">2</a></li>
+            <li class="page-button-item"><a class="button" href="">3</a></li>
+            <li class="page-button-item"><a class="button" href="">Следующая</a></li>
+          </ul>
+
+        </section>
+
+      </div>
 
     </div>
   </main>
@@ -198,7 +280,7 @@
 
     <section class="footer-write-us">
 
-      <h2 class="hidden">Как нас найти?</h2>
+      <h2 class="visually-hidden">Как нас найти?</h2>
 
       <div class="contacts-container">
         <div class="contacts">
@@ -214,15 +296,12 @@
 
     <section class="footer-social-link container">
 
-      <h2 class="hidden">Ссылки на социальные сети</h2>
+      <h2 class="visually-hidden">Ссылки на социальные сети</h2>
 
       <ul class="social-link-list">
         <li class="link-list-item"><a class="button" href=""></a></li>
-        <!--Здесь вместо текста будет  иконка vk-->
         <li class="link-list-item"><a class="button" href=""></a></li>
-        <!--Здесь вместо текста будет иконка facebook-->
         <li class="link-list-item"><a class="button" href=""></a></li>
-        <!--Здесь вместо текста будет иконка instagram-->
       </ul>
 
       <div class="footer-social-text">
