--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </li>
         <li class="features-list-item">
           <h3>Приложения</h3>
-          <p>Покорите топ-10 приложений в AppStore и Google Play</p>
+          <p>Покорите топ-10 приложений<br> в AppStore и Google Play</p>
           <a class="button" href="catalog.html">Заказать</a>
         </li>
         <li class="features-list-item">
@@ -113,12 +113,12 @@
         <ul class="services-list">
           <li>Веб-сайтов любой сложности</li>
           <li>Мобильных приложений для iOS и Android</li>
-          <li>Слайдшоу и видео для корпоративных прецентаций</li>
+          <li>Слайдшоу и видео для корпоративных презентаций</li>
         </ul>
       </div>
 
       <div class="about-us-right-column">
-        <img src="img/nerds-illustration-1.png" width="360" height="280" alt="">
+        <img src="img/nerds-illustration-1.png" width="360" height="208" alt="">
         <p>с 2004 года любим точность во всем:</p>
         <table class="features-table">
           <tr>
@@ -143,7 +143,7 @@
       <ul class="partner-logo-list">
         <li class="logo-list-item"><a href="https://htmlacademy.ru/intensive/htmlcss"><img class="nohover"
               src="img/logo-1-1.svg" width="199" height="67" alt="Логотип сайта HTML Academy"></a></li>
-        <li class="logo-list-item"><a href=""><img class="nohover" src="img/logo-2-1.png" width="208" height="90"
+        <li class="logo-list-item"><a href=""><img class="nohover" src="img/logo-2-1.png" width="209" height="90"
               alt="Логотип сайта Barbershop Borodinski"></a></li>
         <li class="logo-list-item"><a href=""><img class="nohover" src="img/logo-3-1.png" width="185" height="52"
               alt="Логотип сайта Pink "></a></li>
