--- a/catalog.html
+++ b/catalog.html
@@ -23,7 +23,7 @@
         <ul class="site-navigation">
           <li><a href="index.html">Студия</a></li>
           <li><a href="">Клиенты</a></li>
-          <li><a href="catalog.html">Магазин</a></li>
+          <li><a class="page-active" href="catalog.html">Магазин</a></li>
           <li><a href="">Контакты</a></li>
         </ul>
 
