--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </a>
 
         <ul class="site-navigation">
-          <li><a href="">Студия</a></li>
+          <li><a class="page-active" href="">Студия</a></li>
           <li><a href="">Клиенты</a></li>
           <li><a href="catalog.html">Магазин</a></li>
           <li><a href="">Контакты</a></li>
