--- a/index.html
+++ b/index.html
@@ -49,28 +49,28 @@
 
         <ul class="slider-list">
 
-          <li class="slider-list-item slide slide-current">
+          <li class="slider-list-item slide slide-current" >
             <p class="slogan">Долго, дорого, скрупулезно.</p>
             <p>Математически выверенный дизайн<br> для вашего сайта или мобильного приложения.</p>
-            <a href="" class="button">Узнать больше</a>
+            <a href="blank.html" class="button">Узнать больше</a>
           </li>
-          <li class="slider-list-item slide">
+          <li class="slider-list-item slide ">
             <p class="slogan">Любим математику, как никто другой</p>
             <p>Никакого креатива, только математические формулы<br> для расчета идеальных пропорций</p>
-            <a href="" class="button">Узнать больше</a>
+            <a href="blank.html" class="button">Узнать больше</a>
           </li>
           <li class="slider-list-item slide">
             <p class="slogan">Только ночь,<br> только хардкор</p>
             <p>Работать днем, как все? Мы против этого.<br> Ближе к полуночи работа только начинается.</p>
-            <a href="" class="button">Узнать больше</a>
+            <a href="blank.html" class="button">Узнать больше</a>
           </li>
 
         </ul>
 
         <div class="slider-control">
           <button class="current" type="button" aria-label="Первый слайд"></button>
-          <button type="button" aria-label="Второй слайд"></button>
-          <button type="button" aria-label="Третий слайд"></button>
+          <button type="button" type="button" aria-label="Второй слайд"></button>
+          <button type="button" type="button"  aria-label="Третий слайд"></button>
         </div>
 
       </section>
@@ -179,9 +179,9 @@
       <h2 class="visually-hidden">Ссылки на социальные сети</h2>
 
       <ul class="social-link-list">
-        <li class="link-list-item"><a class="button" href=""></a></li>
-        <li class="link-list-item"><a class="button" href=""></a></li>
-        <li class="link-list-item"><a class="button" href=""></a></li>
+        <li class="link-list-item"><a class="button" href="" aria-label="Vkontakte"></a></li>
+        <li class="link-list-item"><a class="button" href="" aria-label="Facebook"></a></li>
+        <li class="link-list-item"><a class="button" href="" aria-label="Instagram"></a></li>
       </ul>
 
       <div class="footer-social-text">
@@ -214,7 +214,7 @@
       <button class="button modal-button">Отправить</button>
     </form>
     
-    <button class="button modal-close" type="button"> 
+    <button class="button modal-close" type="button" aria-label="Закрыть окно"> 
     </button>
 
   </section>
